--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="text_padding">4dp</dimen>
+    <dimen name="standard_padding">16dp</dimen>
 </resources>
